@@ -1,5 +1,6 @@
 version 3.41 2023-05-29
-- session_name() is now always unique per SM install using "submgr" + getcwd()
+- simplified entropy of get_hash() by using sha1_file('config_db.php')
+- session_name() is now always unique per SM install using "submgr_" + sha1($getcwd)
 - added upload_max_filesize routine to /maintenance/fields/
 - moved TEST_MAIL constant from inc_common.php to config_db.php
 - improved error/exception handling in db_connect()
